tests/errors/unterminated_ifdef_01.f90
#ifndef a

program unterminated_ifdef_01
   implicit none
   print *, "Hello world"
end program unterminated_ifdef_01
